--- a/src/index.less
+++ b/src/index.less
@@ -1,5 +1,7 @@
 @color: red;
 body {
   background: @color url(./assets/img/linhe.jpg);
+  font-size: 20px;
+  color: pink;
   transition: all 2s;
 }
